--- a/style/style.css
+++ b/style/style.css
@@ -120,4 +120,11 @@ main {
   padding: 0.3125rem;
   border: 1px solid rgb(235, 235, 235);
   border-radius: 0.375rem;
+}
+
+@media screen and (max-width: 500px) {
+  main {
+    padding: 1rem;
+    min-width: 280px;
+  }
 }/*# sourceMappingURL=style.css.map */
