--- a/style/style.css
+++ b/style/style.css
@@ -6,6 +6,10 @@
   --light-pink: rgb(242, 243, 255);
 }
 
+button:focus, input:focus {
+  outline: none;
+}
+
 body {
   font-family: "Inter", "sans-serif";
   font-weight: 500;
@@ -64,7 +68,6 @@ main {
   width: 1.5rem;
 }
 .heading button:focus {
-  outline: none;
   border: 2px solid #710083;
 }
 
@@ -80,14 +83,20 @@ main {
 .input-block input {
   width: 100%;
   border: none;
-  outline: none;
   border-bottom: 1px black solid;
   margin-bottom: 0.7rem;
+}
+.input-block input::-moz-placeholder {
+  color: rgb(255, 102, 0);
+  opacity: 1;
+}
+.input-block input::placeholder {
+  color: rgb(255, 102, 0);
+  opacity: 1;
 }
 .input-block input:focus {
   width: 100%;
   border: none;
-  outline: none;
   border-bottom: 3px rgb(109, 12, 161) solid;
 }
 .input-block .enter-btn {
@@ -106,20 +115,36 @@ main {
   background-color: var(--light-pink);
 }
 .input-block .enter-btn:focus {
-  outline: none;
   border: 2px solid #710083;
 }
 
 .task-list ul {
   list-style-type: none;
   padding: 0.3125rem;
+  display: flex;
+  flex-direction: column;
 }
-.task-list li {
+
+.task-list__item {
   background-color: var(--light-pink);
   margin: 0.625rem 0.3125rem;
-  padding: 0.3125rem;
+  padding: 0.4375rem;
   border: 1px solid rgb(235, 235, 235);
   border-radius: 0.375rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.task-list__item p {
+  margin-bottom: 0;
+}
+
+.task-btn {
+  padding: 0;
+}
+.task-btn img {
+  width: 40px;
+  pointer-events: none;
 }
 
 @media screen and (max-width: 500px) {
