--- a/style/style.scss
+++ b/style/style.scss
@@ -6,7 +6,9 @@
     --light-grey: #2B2D37;
     --light-pink: rgb(242, 243, 255);
 }
-
+button:focus, input:focus {
+    outline: none;
+}
 
 body {
     font-family: 'Inter', 'sans-serif';
@@ -16,7 +18,6 @@ body {
     justify-content: center;
     align-items: center;
     margin: 20vh 0;
-    
 }
 main {
     background-color: #fff;
@@ -70,7 +71,6 @@ main {
         }
     }
     button:focus {
-        outline: none;
         border: 2px solid #710083;
     }
 }
@@ -88,14 +88,16 @@ main {
     input {
         width: 100%;
         border: none;
-        outline: none;
         border-bottom: 1px black solid;
         margin-bottom: 0.7rem;
+    }
+    input::placeholder {
+        color: rgb(255, 102, 0);
+        opacity: 1;
     }
     input:focus {
         width: 100%;
         border: none;
-        outline: none;
         border-bottom: 3px rgb(109, 12, 161) solid;
         
     }
@@ -117,23 +119,38 @@ main {
         
     }
     .enter-btn:focus {
-        outline: none;
         border: 2px solid #710083;
     }
 }
 
 .task-list {
-    // border: 1px black solid;
     ul {
         list-style-type: none;
         padding: calc(5rem/16);
+        display: flex;
+        flex-direction: column;
     }
-    li {
-        background-color: var(--light-pink);
-        margin: calc(10rem / 16) calc(5rem / 16);
-        padding: calc(5rem / 16);
-        border: 1px solid rgb(235, 235, 235);
-        border-radius: calc(6rem / 16);
+}
+
+.task-list__item {
+    background-color: var(--light-pink);
+    margin: calc(10rem / 16) calc(5rem / 16);
+    padding: calc(7rem / 16);
+    border: 1px solid rgb(235, 235, 235);
+    border-radius: calc(6rem / 16);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    p {
+       margin-bottom: 0;
+    }
+}
+
+.task-btn {
+    padding: 0;
+    img {
+        width: 40px;
+        pointer-events: none;
     }
 }
 
