--- a/style/style.css
+++ b/style/style.css
@@ -152,4 +152,7 @@ main {
     padding: 1rem;
     min-width: 280px;
   }
+  .heading__name {
+    font-size: 2.25rem;
+  }
 }/*# sourceMappingURL=style.css.map */
