--- a/style/style.scss
+++ b/style/style.scss
@@ -159,5 +159,8 @@ main {
         padding: 1rem;
         min-width: 280px;
     }
+    .heading__name {
+        font-size: calc(36rem / 16);
+    }
 }
 
