--- a/style/style.scss
+++ b/style/style.scss
@@ -154,13 +154,20 @@ main {
     }
 }
 
+.task-done-style {
+    text-decoration: line-through;
+    color: rgb(255, 109, 109);
+}
+
 @media screen and (max-width: 500px) {
     main {
         padding: 1rem;
         min-width: 280px;
     }
-    .heading__name {
-        font-size: calc(36rem / 16);
+    .heading {
+        h1 {
+            font-size: calc(36rem / 16);
+        }
     }
 }
 
