--- a/style/style.scss
+++ b/style/style.scss
@@ -6,6 +6,11 @@
     --light-grey: #2B2D37;
     --light-pink: rgb(242, 243, 255);
 }
+
+.dp-none {
+    display: none;
+}
+
 button:focus, input:focus {
     outline: none;
 }
@@ -157,6 +162,14 @@ main {
 .task-done-style {
     text-decoration: line-through;
     color: rgb(255, 109, 109);
+}
+
+.empty-task-list {
+    padding: calc(15rem/16) calc(5rem/16);
+    margin-bottom: calc(5rem/16);
+    border: 2px solid #710083;
+    border-radius: calc(6rem / 16);
+    text-align: center;
 }
 
 @media screen and (max-width: 500px) {
