--- a/style/style.scss
+++ b/style/style.scss
@@ -189,5 +189,10 @@ main {
             font-size: calc(36rem / 16);
         }
     }
+    .list__btn {
+        img {
+            width: 30px;
+        }
+    }
 }
 
